WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290159
REGRESSION(
292461@main
): [Win] MappedFileData is inaccessible
https://bugs.webkit.org/show_bug.cgi?id=290159
Summary
REGRESSION(292461@main): [Win] MappedFileData is inaccessible
Fujii Hironori
Reported
2025-03-20 23:21:31 PDT
After
292461@main
, Windows port is crashing 00 0000005f`1b1ff638 00007ffe`cda93955 VCRUNTIME140!memcpy_repmovs(void)+0xb [D:\a\_work\1\s\src\vctools\crt\vcruntime\src\string\amd64\memcpy.asm @ 50] 01 (Inline Function) --------`-------- JavaScriptCore!WTF::memcpySpan(void)+0x8 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\StdLibExtras.h @ 1143] 02 (Inline Function) --------`-------- JavaScriptCore!WTF::FileSystemImpl::mapToFile::<lambda_0>::operator()(void)+0x16 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\FileSystem.cpp @ 376] 03 0000005f`1b1ff650 00007ffe`cdfa1386 JavaScriptCore!WTF::Detail::CallableWrapper<`lambda at C:\BW\Win-Build-EWS\build\Source\WTF\wtf\FileSystem.cpp:375:11',bool,std::span<const unsigned char,18446744073709551615> >::call(class std::span<const unsigned char,18446744073709551615> * in = <Value unavailable error>)+0x25 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\Function.h @ 53] 04 (Inline Function) --------`-------- WebKit2!WTF::Function<bool (class std::span<const unsigned char,18446744073709551615> * in = <Value unavailable error>)+0x18 [C:\BW\Win-Build-EWS\build\WebKitBuild\Release\WTF\Headers\wtf\Function.h @ 82] 05 0000005f`1b1ff680 00007ffe`cda893b7 WebKit2!WebKit::NetworkCache::Data::apply(class WTF::Function<bool (std::span<const unsigned char,18446744073709551615>)> * applier = <Value unavailable error>)+0x86 [C:\BW\Win-Build-EWS\build\Source\WebKit\NetworkProcess\cache\NetworkCacheDataCurl.cpp @ 84] 06 (Inline Function) --------`-------- JavaScriptCore!WTF::Function<void (class WTF::Function<bool (std::span<const unsigned char,18446744073709551615>)> * in = <Value unavailable error>)+0xe [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\Function.h @ 82] 07 0000005f`1b1ff6c0 00007ffe`ce44ab10 JavaScriptCore!WTF::FileSystemImpl::mapToFile(class WTF::String * path = <Value unavailable error>, unsigned int64 bytesSize = 0x25e30, class WTF::Function<void (const WTF::Function<bool (std::span<const unsigned char,18446744073709551615>)> &)> * apply = 0x0000005f`1b1ff768, class WTF::FileSystemImpl::FileHandle * outputHandle = 0x0000005f`1b1ff788)+0x77 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\FileSystem.cpp @ 375] 08 0000005f`1b1ff740 00007ffe`ce44a544 WebKit2!WebKit::NetworkCache::Data::mapToFile(class WTF::String * path = 0x0000005f`1b1ff7f8)+0x70 [C:\BW\Win-Build-EWS\build\Source\WebKit\NetworkProcess\cache\NetworkCacheData.cpp @ 48] 09 0000005f`1b1ff7c0 00007ffe`ce455f10 WebKit2!WebKit::NetworkCache::BlobStorage::add(class WTF::String * path = 0x0000005f`1b1ff8f8, class WebKit::NetworkCache::Data * data = 0x0000023a`74f57000)+0x1a4 [C:\BW\Win-Build-EWS\build\Source\WebKit\NetworkProcess\cache\NetworkCacheBlobStorage.cpp @ 111] 0a 0000005f`1b1ff8d0 00007ffe`ce47052d WebKit2!WebKit::NetworkCache::Storage::storeBodyAsBlob(class WTF::ObjectIdentifierGeneric<WebKit::NetworkCache::Storage::WriteOperationIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long> identifier = class WTF::ObjectIdentifierGeneric<WebKit::NetworkCache::Storage::WriteOperationIdentifierType,WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>,unsigned long long>, struct WebKit::NetworkCache::Storage::Record * record = <Value unavailable error>)+0xb0 [C:\BW\Win-Build-EWS\build\Source\WebKit\NetworkProcess\cache\NetworkCacheStorage.cpp @ 748] 0b (Inline Function) --------`-------- WebKit2!WebKit::NetworkCache::Storage::dispatchWriteOperation::<lambda_12>::operator()(void)+0xc6 [C:\BW\Win-Build-EWS\build\Source\WebKit\NetworkProcess\cache\NetworkCacheStorage.cpp @ 1040] 0c 0000005f`1b1ff9a0 00007ffe`cdaaee9e WebKit2!WTF::Detail::CallableWrapper<`lambda at C:\BW\Win-Build-EWS\build\Source\WebKit\NetworkProcess\cache\NetworkCacheStorage.cpp:1032:34',void>::call(void)+0xed [C:\BW\Win-Build-EWS\build\WebKitBuild\Release\WTF\Headers\wtf\Function.h @ 53] 0d (Inline Function) --------`-------- JavaScriptCore!WTF::Function<void (void)+0x9 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\Function.h @ 82] 0e 0000005f`1b1ffa90 00007ffe`cdb69025 JavaScriptCore!WTF::RunLoop::performWork(void)+0x1ce [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\RunLoop.cpp @ 148] 0f 0000005f`1b1ffae0 00007ffe`cdb68fa6 JavaScriptCore!WTF::RunLoop::wndProc(struct HWND__ * hWnd = <Value unavailable error>, unsigned int message = <Value unavailable error>, unsigned int64 wParam = <Value unavailable error>, int64 lParam = 0n0)+0x45 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\win\RunLoopWin.cpp @ 59] 10 0000005f`1b1ffb50 00007ffe`ff0974d6 JavaScriptCore!WTF::RunLoop::RunLoopWndProc(struct HWND__ * hWnd = 0x00000000`438507f4, unsigned int message = 0x401, unsigned int64 wParam = 0x0000023a`728c6bb0, int64 lParam = 0n0)+0x36 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\win\RunLoopWin.cpp @ 52] 11 0000005f`1b1ffba0 00007ffe`ff096ff2 USER32!UserCallWinProcCheckWow+0x266 12 0000005f`1b1ffd20 00007ffe`cdb6930f USER32!DispatchMessageWorker+0x1b2 13 0000005f`1b1ffda0 00007ffe`cdafea5c JavaScriptCore!WTF::RunLoop::run(void)+0x5f [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\win\RunLoopWin.cpp @ 88] 14 (Inline Function) --------`-------- JavaScriptCore!WTF::Function<void (void)+0x9 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\Function.h @ 82] 15 0000005f`1b1ffe20 00007ffe`cdb6a3a9 JavaScriptCore!WTF::Thread::entryPoint(struct WTF::Thread::NewThreadContext * newThreadContext = <Value unavailable error>)+0xdc [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\Threading.cpp @ 269] 16 0000005f`1b1ffea0 00007ffe`fd8d268a JavaScriptCore!WTF::wtfThreadEntryPoint(void * data = <Value unavailable error>)+0x9 [C:\BW\Win-Build-EWS\build\Source\WTF\wtf\win\ThreadingWin.cpp @ 147] 17 0000005f`1b1ffed0 00007ffe`fed27ac4 ucrtbase!thread_start<unsigned int +0x3a 18 0000005f`1b1fff00 00007fff`010ea8c1 KERNEL32!BaseThreadInitThunk+0x14 19 0000005f`1b1fff30 00000000`00000000 ntdll!RtlUserThreadStart+0x21
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2025-03-20 23:24:52 PDT
~MappedFileData is called at the end of FileHandle::map.
https://github.com/WebKit/WebKit/blob/765846b29b22af1676d2bc30a2027a4e27a75b0c/Source/WTF/wtf/win/FileHandleWin.cpp#L183
Fujii Hironori
Comment 2
2025-03-21 00:46:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42799
EWS
Comment 3
2025-03-21 00:50:02 PDT
Committed
292465@main
(22cf494d8b67): <
https://commits.webkit.org/292465@main
> Reviewed commits have been landed. Closing PR #42799 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-03-21 00:51:27 PDT
<
rdar://problem/147562177
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug