REGRESSION(292461@main): [Win] MappedFileData is inaccessible https://bugs.webkit.org/show_bug.cgi?id=290159

Unreviewed crash fix for Windows port after
<https://commits.webkit.org/292461@main>.

FileHandle::map() of Windows port always returned an invalid
MappedFileData. It released the file mapping immediately.

MappedFileData of Windows port has two members:
>    std::span<uint8_t> m_fileData;
>    Win32Handle m_fileMapping;

If a MappedFileData is moved, m_fileMapping is cleared, but m_fileData
is not cleared. ~MappedFileData released the file mapping if
m_fileData wasn't null. ~MappedFileData should check m_fileMapping
too.

* Source/WTF/wtf/win/MappedFileDataWin.cpp:
(WTF::FileSystemImpl::MappedFileData::~MappedFileData):

Canonical link: https://commits.webkit.org/292465@main